# locator-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: check-dynamic.yml  check-static.yml
locator/: Cargo.toml
locator-codegen/: Cargo.toml
locator-codegen/src/: ecosystem.rs  lib.rs  locator_parts.rs
locator/src/: constraint.rs  ecosystem.rs  error.rs  lib.rs  locator.rs  locator_package.rs  locator_strict.rs  locator_t.rs  org_id.rs  package.rs  purl.rs  revision.rs
locator/src/constraint/: cargo.rs  fallback.rs  gem.rs  nuget.rs  pip.rs
locator/src/purl/: apk.rs  bitbucket.rs  cargo.rs  cocoapods.rs  composer.rs  cpan.rs  cran.rs  dart_pub.rs  deb.rs  gem.rs  gitee.rs  github.rs  gitlab.rs  golang.rs  googlesource.rs  hackage.rs  hex.rs  maven.rs  npm.rs  nuget.rs  pypi.rs  rpm.rs  sourceforge.rs  stackoverflow.rs  swift.rs
locator/tests/it/: constraint.rs  ecosystem.rs  error.rs  locator_package.rs  locator_strict.rs  locator_t.rs  main.rs
locator/tests/it/constraint/: fallback.rs  nuget.rs
locator/tests/proptest-regressions/: locator_t.txt
src/: constraint.rs  error.rs  fetcher.rs  lib.rs  locator.rs  locator_package.rs  locator_strict.rs  test.rs
src/constraint/: cargo.rs  fallback.rs  gem.rs  nuget.rs  pip.rs
tests/it/: constraint.rs  main.rs
