[package]
name = "locator"
version = "2.4.0"
edition = "2024"

[dependencies]
alphanumeric-sort = "1.5.3"
getset = "0.1.2"
pretty_assertions = "1.4.0"
serde = { version = "1.0.140", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "1.0.31"
utoipa = "4.2.3"
serde_json = "1.0.95"
documented = "0.7.1"
semver = "1.0.23"
bon = "2.3.0"
duplicate = "2.0.0"
lazy-regex = { version = "3.3.0", features = ["regex"] }
enum-assoc = "1.2.4"
unicase = "2.8.1"
lexical-sort = "0.3.1"
derive-new = "0.7.0"
nom = "8.0.0"
derive_more = { version = "2.0.1", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
assert_matches = "1.5.0"
impls = "1.0.3"
itertools = "0.10.5"
pretty_assertions = "1.4.0"
proptest = "1.0.0"
simple_test_case = "1.2.0"
static_assertions = "1.1.0"
