[workspace]
members = ["locator"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
uninlined_format_args = "deny"
unwrap_used = "deny"
unit_arg = "allow"

[profile.release]
strip = true
lto = "fat"
