[package]
name = "locator"
version = "3.0.3"
edition = "2024"

[dependencies]
alphanumeric-sort = "1.5.3"
getset = "0.1.5"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2"
utoipa = "5"
serde_json = "1.0.140"
documented = "0.9"
semver = "1.0.26"
bon = "3.6.3"
duplicate = "2.0.0"
lazy-regex = { version = "3.4.1", features = ["regex"] }
enum-assoc = "1.2.4"
unicase = "2.8.1"
lexical-sort = "0.3.1"
derive-new = "0.7.0"
nom = "8.0.0"
derive_more = { version = "2.0.1", features = ["full"] }
tracing = "0.1.41"
derivative = "2.2.0"

[dev-dependencies]
assert_matches = "1.5.0"
impls = "1.0.3"
itertools = "0.14.0"
pretty_assertions = "1.4.1"
proptest = "1.6.0"
simple_test_case = "1.3.0"
static_assertions = "1.1.0"
