[package]
name = "locator"
version = "4.0.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
alphanumeric-sort = "1.5.3"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2"
utoipa = "5"
serde_json = "1.0.140"
documented = "0.9"
semver = "1.0.26"
bon = "3.6.3"
duplicate = "2.0.0"
lazy-regex = { version = "3.4.1", features = ["regex"] }
enum-assoc = "1.2.4"
unicase = "2.8.1"
lexical-sort = "0.3.1"
derive-new = "0.7.0"
nom = "8.0.0"
derive_more = { version = "2.0.1", features = ["full"] }
tracing = "0.1.41"
derivative = "2.2.0"
versions = { version = "7.0.0", features = ["serde"] }
compact_str = { version = "0.9.0", features = ["serde"] }
either = { version = "1.15.0", features = ["serde"] }
locator-codegen = { path = "../locator-codegen" }
serde_plain = "1.0.2"
miette = "7.6.0"
non-empty-string = { version = "0.2.6", features = ["macros", "serde"] }

[dev-dependencies]
assert_matches = "1.5.0"
color-eyre = "0.6.5"
impls = "1.0.3"
itertools = "0.14.0"
monostate = "0.1.14"
pretty_assertions = "1.4.1"
proptest = "1.6.0"
simple_test_case = "1.3.0"
static_assertions = "1.1.0"
